<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp" >

                <LinearLayout
                    android:id="@+id/shop_info_address_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/shop_info_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/shop_info_address"
                        android:textColor="@color/title"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/shop_info_navigate_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:contentDescription="@string/shop_info_navigate"
                        android:drawableLeft="@drawable/gps"
                        android:text="@string/shop_info_navigate"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- <View -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="1dp" -->
                <!-- android:background="@android:color/black" -->
                <!-- android:layout_below="@id/shop_info_address_section"/> -->


                <!-- <TextView -->
                <!-- android:id="@+id/shop_info_contact_us" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_below="@id/shop_info_address_section" -->
                <!-- android:padding="5dp" -->
                <!-- android:layout_marginTop="10dp" -->
                <!-- android:text="@string/shop_info_contact_us" -->
                <!-- android:textColor="@color/title" -->
                <!-- android:textSize="15sp" /> -->

                <TextView
                    android:id="@+id/shop_info_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/shop_info_address_section"
                    android:padding="5dp"
                    android:text="@string/shop_info_email"
                    android:textColor="@color/title"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shop_info_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/shop_info_email"
                    android:padding="5dp"
                    android:text="@string/shop_info_phone"
                    android:textColor="@color/title"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <!-- <TextView -->
                <!-- android:id="@+id/shop_info_watch_our_meals" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_below="@id/shop_info_phone" -->
                <!-- android:layout_marginTop="10dp" -->
                <!-- android:padding="5dp" -->
                <!-- android:text="@string/shop_info_watch_our_meals" -->
                <!-- android:textColor="@color/title" -->
                <!-- android:textSize="15sp" /> -->
            </RelativeLayout>
        </ScrollView>

        <!-- android:layout_below="@id/shop_info_watch_our_meals" -->

        <GridView
            android:id="@+id/shop_info_gallery_gridview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/shop_info_expanded_image_outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="#80000000"
        android:visibility="invisible" >

        <ImageView
            android:id="@+id/shop_info_expanded_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/shop_info_zoomed_meal"
            android:visibility="invisible" />
    </FrameLayout>

</FrameLayout>